datawrapper_version/index.css
/* fonts */
@font-face {
    font-family: "Noto Sans";
    src: url("fonts/NotoSansJP-Regular.otf");
}
@font-face {
    font-family: "Noto Sans";
    src: url("fonts/NotoSansJP-Bold.otf");
    font-weight: bold;
}
@font-face {
    font-family: "Noto Sans";
    src: url("fonts/NotoSansJP-Light.otf");
    font-style: italic;
}

/* setup */
html {
    scroll-behavior: smooth;
    width: 100%;
}

body {
    background-color: #f6f6f6;
    color: #000000;
    font-size: 20px;
    margin: 0;
    width: 100%;
}

/* alignment */
.background-image {
    width: 100%;
    position: absolute;
    z-index: -1;
    -webkit-mask-image:-webkit-gradient(linear, left top, left bottom, from(rgba(0,0,0,0.8)), to(rgba(0,0,0,0)));
    mask-image: linear-gradient(to bottom, rgba(0,0,0,0.8) 0%, rgba(0,0,0,0) 100%);
}

.left-block {
    flex: 1;
}

.state {
    display: flex;
    justify-content: center;
    margin-top: 0;
    z-index: 2;
}


/* state */
.state-container {
    background-color: #f6f6f6;
    /*width: 50%;*/
    max-width: 900px;
    box-shadow: 0 0 5px;
    padding-bottom: 30px;
    flex: 2;
}

/*state text*/
.state--title {
    color: white;
    padding: 10px;
    background-color: #4a4a6d;
    font-family: 'Roboto', sans-serif;
    margin-top: 0;
}

.paragraph-header {
    font-size: 2rem;
    font-family: "Noto Sans", sans-serif;
    font-weight: bold;
    margin-bottom: 15px;
}

.paragraph-container {
    border: 1px solid #aa9e9e;
    padding: 20px;
    margin: 20px auto 0 auto;
    border-radius: 5px;
    background-color: #fffefe;
    width: 85%;
    font-family: "Noto Sans", sans-serif;
    font-size: 0.8em;
}

.paragraph-container p {
    margin-bottom: 10px;
}

.paragraph-container p:last-of-type {
    margin-bottom: 0;
}


/*paragraph attachments*/

/* attachment table */
.paragraph--table {
    width: 90%;
    overflow: auto;
    margin: 0 auto 0 auto;
    box-shadow: 0 0 5px;
    background-color: #fafafa;
    border: 2px solid #96b7c7;
}

.paragraph--table td, .paragraph--table th {
    border: 1px solid #96b7c7;
    text-align: center;
    padding: 5px;
    background-color: #f2f2f2;
    transition: background-color 0.15s;
}

.paragraph--table td:hover {
    background-color: #ffff;
}

/*attachment image*/
.paragraph--img {
    width: 90%;
    max-width: 700px;
    min-width: 200px;

    display: block;
    margin: 20px auto 0 auto;
    box-shadow: 0 0 5px;

    cursor: pointer;
    transition: opacity 0.2s;
}

.paragraph--img:hover {
    opacity: 0.9;
}

.paragraph--attachment-title {
    margin: 20px auto 40px auto;
    text-align: center;
    font-style: italic;

}


/* navigation */
nav {
    position: -webkit-sticky;
    position: sticky;
    top: 10px;
    margin: 200px auto 0 20px;
    width: max-content;
    background-color: #f6f6f6;
    padding-left: 20px;
    opacity: 0.7;
    transition: opacity 0.2s;
    flex: 1;
    align-self: flex-start;
}

nav:hover {
    opacity: 1;
}

nav ul {
    list-style: none;
    padding: 0;
    display: flex;
    flex-direction: column;
    align-items: flex-start;
}

nav li {
    /*border: 1px solid red;*/
    opacity: 0.8;
    transition: border-bottom-color 0.2s;
    border-bottom: 2px solid rgba(255, 0, 0, 0);
    padding: 6px;
    cursor: pointer;
}

nav a {
    text-decoration: none;
    color: #4a4a6d;
}

nav li:hover {
    opacity: 1;
    border-bottom-color: #9c9ce0;
}

.navigation-item-current {
    border-bottom: 2px solid #4b4b6e;
    opacity: 1;
}


/* left block */
.left-block {
    opacity: 0.7;
    transition: opacity 0.2s;
    z-index: 0;
}
.left-block:hover {
    opacity: 1;
}


.left-block--header {
    font-size: 1.4em;
}

.left-block--contacts {
    padding: 0 15px 0 15px;
    float: right;
    text-align: left;
    margin-right: 10px;
    width: max-content;
    margin-top: 200px;
    background-color: #f2f2f2;
    list-style: none;
}

.left-block--contacts a {
    text-decoration: none;
    color: #2e2e2e;
}

.left-block--contacts a:hover{
    text-decoration: none;
    color: #666666;
}


/* modal content*/
.modal {
    display: none;
    position: fixed;
    z-index: 1;
    height: 100%;
    width: 100%;
    top: 0;
    left: 0;
    overflow: auto;
    background-color: rgba(0, 0, 0, 0.88);
}

.modal--content {
    margin: 100px auto;
    display: block;
    width: 80%;
    max-width: 900px;
    /*border: 1px solid #22225e;*/
    box-shadow: 0 0 30px;
}

.yandex-donation {
    width: 20%;
    margin: auto;
    /*padding-bottom: 1000px;*/
    min-width: 500px;
}


/*screen width breakpoint*/
@media (max-width: 1200px) {

    .left-block {
        display: none;
    }

    .state {
        background-color: red;
        border: 3px solid greenyellow;
        width: 100%;
    }

    .state-container {
        margin: 0 auto 0 auto;
        min-width: 200px;
        background-color: orange;
    }


    nav {
        opacity: 1;
        margin: 0 auto 0 auto;
        width: 100%;
        background-color: #f6f6f6;
        box-shadow: 0 -3px 5px rgba(0, 0, 0, 0.45);

        top: unset;
        position: fixed;
        bottom: 0;
    }

    nav ul {
        white-space: nowrap;
        overflow-x: auto;
        -webkit-overflow-scrolling: touch;
        -ms-overflow-style: -ms-autohiding-scrollbar;
        display: block;

        justify-content: center;
        flex-direction: row;
        margin-top: -6px;
    }


    nav ul::-webkit-scrollbar {
        display: none;
    }

    nav li {
        display: inline-block;
        margin-left: 30px;
        opacity: 1;
    }

    nav li {
        border-bottom: unset;
    }
}

@media (max-width: 1400px) and (min-width: 650px) {
    nav {
        height: 30px;
        font-size: 1em;
    }
}

@media screen and (max-width: 650px) {
    nav {
        height: 60px;
        font-size: 2em;
    }
}

